@@ -7,6 +7,9 @@
   applied was always just alphabetical by filename, which is frequently
   but not always what you want.
 * Fix crash in lastid when the artist name is not available.
+* Fixed a spurious crash when LANG or a related environment variable is
+  set to an invalid value (such as 'UTF-8' on some installations of Mac
+  OS X).
 
 1.0b5
 -----
